--- a/app/globals.css
+++ b/app/globals.css
@@ -7,4 +7,9 @@ body {
   padding: 0;
   box-sizing: border-box;
   background: #000;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
